[package]
name = "keysymdefs"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["keysym", "keysymdefs", "x11", "xorg"]
categories = ["data-structures", "parsing", "os", "multimedia"]
description = "A collection of key symbol definitions."
repository = "https://github.com/milchinskiy/keysymdefs.git"
homepage = "https://github.com/milchinskiy/keysymdefs"
documentation = "https://github.com/milchinskiy/keysymdefs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "keysymdefs"
harness = false
